# JIPP2

./: CMakeLists.txt  README.md
PROJEKT_KONCOWY/: CMakeLists.txt  Plansza.cpp  Plansza.h  Pole.cpp  Pole.h  main.cpp
PROJEKT_KONCOWY/src/: CMakeLists.txt  Plansza.cpp  Plansza.h  Pole.cpp  Pole.h  Przyjaciel.cpp  Przyjaciel.h  Top10.cpp  Top10.h  db.cpp  main.cpp  ofApp.cpp  ofApp.h
allocation_basics/: CMakeLists.txt  main.cpp
first_classes/: CMakeLists.txt
first_classes/include/: prostopadloscian.h
first_classes/src/: main.cpp  prostopadloscian.cpp
first_lib/: CMakeLists.txt
first_lib/include/: lib.h
first_lib/src/: lib.cpp
first_lib_call/: CMakeLists.txt
first_lib_call/src/: main.cpp
lab10/: CMakeLists.txt  CsvLib.cpp  CsvLib.h  example.csv  main.cpp
lab11/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
lab12/: CMakeLists.txt
lab12/hej/: CMakeLists.txt  main.cpp
lab4_zadania/: CMakeLists.txt
lab4_zadania/classes/: CMakeLists.txt
lab5/include/: Point.h
lab5/src/: Point.cpp
lab5_zadania/: CMakeLists.txt
lab5_zadania/include/: Samochody.h
lab5_zadania/src/: Samochody.cpp  main.cpp
lab6/include/: complex.h
lab6/src/: complex.cpp
lab7/: CMakeLists.txt  main.cpp  poli.cpp
lab8/: CMakeLists.txt  Note.cpp  main.cpp
lab8/include/: Note.h
matrixApp/: CMakeLists.txt  asd
matrixApp/src/: main.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: matrixLib.h
matrixLib/src/: matrixLib.cpp  sdf.cpp
simple_calc/: CMakeLists.txt
simple_calc/include/: calc.h
simple_calc/src/: calc.cpp  main.cpp
structures/: CMakeLists.txt
(+18 files in other folders)
