cmake_minimum_required(VERSION 3.16)

add_subdirectory(allocation_basics)

add_subdirectory(simple_calc)

add_subdirectory(first_lib)

add_subdirectory(first_lib_call)

add_subdirectory(lab4_zadania)

add_subdirectory(matrixApp)

add_subdirectory(matrixLib)

add_subdirectory(lab5)
add_subdirectory(lab5_zadania)
